fix W5*(miss edit in sdb test), update readme and solve warnings